# LearningCMake

./: CMakeLists.txt  config.h.in  main.c
math/: CMakeLists.txt  CalcPower.c  CalcPower.h
